<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f0f0f0"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_title"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dip"
            android:text="@string/cart"
            android:textColor="#ffffff"
             android:textSize="@dimen/medium_text_size"  />
    </LinearLayout>

 <!--    如果没有登录，打开登录提示 -->
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:background="@drawable/category_selection_gridview_bg"
             
             >

            <Button 
                android:id="@+id/cart_login"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="登录"   
                android:layout_gravity="center_vertical"
                android:background="@drawable/android_title_button_pressed"             
                />

           <TextView
               android:paddingLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:textSize="12sp"
                android:textColor="@color/goldyellow"
                android:text="@string/cart_logininfo" /> 
            
        </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/layout_cart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:background="@drawable/category_selection_gridview_bg" >

            

            <ImageView
                android:id="@+id/cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
               android:layout_gravity="center"
                android:background="@drawable/cart_no_data_icon"
                android:padding="10dp" />

           <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="15dp"
                android:textColor="@color/black"
                android:text="@string/cartinfo_no" /> 
            
        </LinearLayout>

        
        <Button 
            android:id="@+id/cart_market"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/cart_btn_normal"
            android:text="@string/cart_market"
            android:textSize="18sp"
           android:paddingLeft="10dp"
            android:paddingRight="10dp"
            />
        
        
        </LinearLayout>
        
</LinearLayout>