<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/search_toolbar_bg"
    android:baselineAligned="false"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/search_barcode_btn"
        style="@style/home_color_shopping_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="5.0dip"
        android:layout_marginRight="5.0dip"
        android:layout_weight="1.0"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/app_icon_barcode" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4.0dip"
            android:text="@string/barcode_buy"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/search_camera_btn"
        style="@style/home_color_shopping_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="4.0dip"
        android:layout_marginRight="4.0dip"
        android:layout_weight="1.0"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal"
        android:visibility="visible" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/app_icon_camera" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5.0dip"
            android:text="@string/camera_buy"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/color_shopping_btn"
        style="@style/home_color_shopping_button"
        android:layout_width="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="4.0dip"
        android:layout_marginRight="4.0dip"
        android:layout_weight="1.0"
        android:clickable="true"
        android:descendantFocusability="blocksDescendants"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/app_icon_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="3.0dip"
            android:text="@string/color_buy"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>