<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_layout_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/personal_top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/android_title_bg" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/quick_register_headtab1"
        android:padding="10dp" >
        
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="20dp"
            android:text="输入手机号"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:paddingLeft="100dp"
            android:text="输入短信密码"
            android:textSize="12sp"
            android:textColor="@color/black" />

       <!--  <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="8dp"
            android:text="输入手机号"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/toright_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10sp"
            android:text="输入短信密码"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/toright_arrow" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="10sp"
            android:text="完成注册"
            android:textColor="@color/black" /> -->
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp"
        android:text="@string/registerinfo"
        android:textColor="@color/goldyellow"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/category_selection_gridview_bg" >
        
        <EditText 
            android:id="@+id/edit_mobile"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:hint="请输入你的手机号"
            android:inputType="number"
            android:background="@null"
            android:layout_gravity="center_vertical"
            />
        
    </LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        
        >
    <ImageButton
        android:id="@+id/checkBox"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        
        android:background="@drawable/selector_checkbox" />

     <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="同意"
            android:textColor="@color/black" />
    
    </LinearLayout>
    
    <Button
                android:id="@+id/access_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/register_btn_bg"
                android:gravity="center"
                android:text="获取密码"
                android:textColor="@color/white"
                android:textSize="16sp" />
    
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingTop="20dp"
             android:layout_margin="10dp"
            android:text="@string/register_tip"
            android:textSize="12sp"
            android:textColor="#9b7e33" />
    
    <Button
        android:id="@+id/register_mormal"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="30dp"
        android:background="@drawable/category_selection_gridview_bg"
       android:drawableRight="@drawable/quick_register_toseeagreement"
       android:paddingRight="20dp"
        android:gravity="left"
        android:paddingTop="10dp"
        android:paddingLeft="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="普通用户注册"
        android:textSize="16sp" />
    
</LinearLayout>